--- a/recipes/baked-banana-chips.html
+++ b/recipes/baked-banana-chips.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>Baked Banana Chips</h1>
+    <img src="https://www.allrecipes.com/thmb/VXHf-9KgFMuOOEabuWFOLcPWQcE=/750x0/filters:no_upscale():
+    max_bytes(150000):strip_icc():format(webp)/4577553-a46106cf85c44818872e34ccf241fbda.jpg">
+    <h3>Description</h3>
+    <p>These simple 2-ingredient chips make marvelous snacks packed with fiber, potassium, calcium, magnesium, and iron!</p>
+    <h5>Ingredients</h5>
+    <ul>
+        <li>2 just-ripe bananas, sliced in 1/10-inch-thick rounds, or more as needed</li>
+        <li>1 teaspoon lemon juice, or to taste</li>
+    </ul>
+
+    <ol>
+        <li>Preheat the oven to 225 degrees F (110 degrees C). Line a baking sheet with parchment paper.</li>
+        <li>Spread banana slices out onto the prepared baking sheet, 
+        making sure slices are not touching. Brush with lemon juice.</li>
+        <li>Bake in the preheated oven for 90 minutes. Check bananas, lifting slices up to separate from the paper once or twice. 
+        Continue baking until bananas are dried out, 30 to 90 minutes more.
+        </li>
+        <li>Let bananas cool until crispy, at least 5 minutes.</li>
+    </ol>
 </body>
 </html>
