--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/baked-banana-chips.html">Baked Banana Chips</a>
+    <a href="./recipes/baked-banana-chips.html">Baked Banana Chips</a>
     
 </body>
 </html>
