--- a/recipes/baked-banana-chips.html
+++ b/recipes/baked-banana-chips.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Baked Banana Chips</h1>
-    <img src="https://www.allrecipes.com/thmb/VXHf-9KgFMuOOEabuWFOLcPWQcE=/750x0/filters:no_upscale():
+    <img alt="Image of Baked Banana Chips" src="https://www.allrecipes.com/thmb/VXHf-9KgFMuOOEabuWFOLcPWQcE=/750x0/filters:no_upscale():
     max_bytes(150000):strip_icc():format(webp)/4577553-a46106cf85c44818872e34ccf241fbda.jpg">
     <h3>Description</h3>
     <p>These simple 2-ingredient chips make marvelous snacks packed with fiber, potassium, calcium, magnesium, and iron!</p>
